* Added WordPress HTML5 markup support for search form, comment form, comment list, and caption
* Added sanity checks to ensure constants are not already defined
* Added `OpusPrimusRouter` class to replace path and URL CONSTANTS
* Added appropriate suffixes to script and style handles to ensure uniqueness in OpusPrimusPullQuotes
* Changed post breadcrumb link to the WordPress shortlink
* Create `/lib/` folder to store bundled libraries and ancillary files
* Enqueue JavaScripts and CSS for SlickNav JavaScript plugin integration to handle mobile menus

= CSS =
* Added new typography styles for better reading
* Added styles for the "BNS Login" plugin
* Added `clear: both` to `footer`
* Hide the post/page breadcrumbs in mobile displays
* Hide "Search" button for search form
* Removed duplicate definitions from media queries stylesheet
* Updated `editor-style.css` to match new typography of theme
* Updated galleries styles to use HTML5 markup
* Updated font-size of excerpt more link symbol to 35px from 200%

= JavaScript =
* Integrated "SlickNav" (Created by Josh Cope - @computerwolf) for mobile menu support
* Integrated "FitVids" built by Chris Coyier (http://chriscoyier.net/) and Paravel (http://paravelinc.com/)

= Miscellaneous
* Added Contact Form 7 compatibility
* Removed `works-in-progress` folder from theme
* Updated `readme.txt` to note the use and license of SlickNav by Josh Cope
* Updated `readme.txt` to note the use and license of FitVids by Chris Coyier and Paravel
* Updated `style.css` description to emphasize the addition of the SlickNav and FitVids libraries
* Updated `screenshot.png` to better reflect latest release

/** ------------------------------------------------------------------------- */
== Version 1.2.5 ==
* Released July 2014

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts